--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 hs_err_pid*
 replay_pid*
 /summer2024-swp391.se1811-g1-20240518T151326Z-001/summer2024-swp391.se1811-g1/OnlineShopping/dist/
+summer2024-swp391.se1811-g1-20240518T151326Z-001/summer2024-swp391.se1811-g1/OnlineShopping/nbproject/private/private.xml
